# anti-doomscrolling

./: .gitignore  Makefile  main.py  pyproject.toml
src/core/: config.py  logging.py  state_machine.py
src/notifications/: __init__.py  base.py  dispatcher.py  macos.py
src/vision/: overlay.py  pipeline.py
src/vision/capture/: camera.py
src/vision/face_detection/: face_detector.py
src/vision/gaze_tracking/: gaze_estimator.py
src/vision/phone_detection/: phone_detector.py
