[project]
name = "anti-doom-scrolling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "openai>=2.20.0",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.1",
    "ultralytics>=8.4.14",
]
